<resources>
    <string name="app_name">Week5</string>
    <string name="username_string">UserName</string>
    <string name="gender_string">Gender</string>
    <string name="age_string">Age</string>
    <string name="weight_string">Weight</string>
    <string name="height_string">Height</string>
    <string name="application_mode_string">Application Mode</string>
    <string name="language_string">Language</string>
    <string name="password_string">Password</string>
    <string name="file_string">File</string>
    <string name="enter_username_hint">Enter userName</string>
    <string name="enter_gender_hint">Choose gender</string>
    <string-array name="gender_arrays">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="enter_age_hint">Enter age</string>
    <string name="enter_weight_hint">Enter weight</string>
    <string name="enter_height_hint">Enter height</string>
    <string name="file_hint">Choose a File</string>
    <string name="enter_application_mode_hint">Enter Application Mode</string>
    <string-array name="application_mode_arrays">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string name="enter_language_hint">Enter Language</string>
    <string-array name="language_arrays">
        <item>English</item>
        <item>Turkish</item>
    </string-array>
    <string name="enter_password_hint">Enter password</string>
    <string name="login_string">Login</string>
    <string name="register_string">Register</string>
    <string name="logo_string">Logo</string>

    <string name="to_string">To</string>
    <string name="subject_string">Subject</string>
    <string name="message_string">Message</string>
    <string name="enter_to_hint">Enter to</string>
    <string name="enter_subject_hint">Enter subject</string>
    <string name="enter_message_hint">Enter message</string>
    <string name="send_string">Send</string>
    <string name="save_string">Save</string>
    <string name="send_mail_string">Send Mail</string>
    <string name="user_reference_string">User Preferences</string>
    <string name="light_sensor_string">Light Sensor</string>
    <string name="acceleration_sensor_string">Acceleration Sensor</string>
    <string name="incoming_call_string">Incoming Call</string>
    <string name="file_choose_string">Choose File</string>

    <string name="saved_user_name">userNameKey</string>
    <string name="saved_password">passwordKey</string>
    <string name="saved_gender">genderKey</string>
    <string name="saved_age">ageKey</string>
    <string name="saved_weight">weightKey</string>
    <string name="saved_height">heightKey</string>
    <string name="saved_application_mode">applicationModeKey</string>
    <string name="saved_language">languageKey</string>

    <string name="default_application_mode">Dark</string>
    <string name="default_language">English</string>
    <string name="default_gender">Male</string>

    <string name="x_label_string">X:</string>
    <string name="x_value_string">0</string>
    <string name="y_label_string">Y:</string>
    <string name="y_value_string">0</string>
    <string name="z_label_string">Z:</string>
    <string name="z_value_string">0</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
