<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
    android:id="@+id/x_label_textview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/x_label_string" />

    <TextView
        android:id="@+id/x_value_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/x_value_string" />

    <TextView
        android:id="@+id/y_label_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/y_label_string" />

    <TextView
        android:id="@+id/y_value_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/y_value_string" />

    <TextView
        android:id="@+id/z_label_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/z_label_string" />

    <TextView
        android:id="@+id/z_value_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/z_value_string" />
</LinearLayout>